--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pexels-miguel-Ã¡-padriÃ±Ã¡n-2882509.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pexels-miguel-Ã¡-padriÃ±Ã¡n-2882509.jpg" alt="" /></a>
 
 							<p> I am a third year Pharmacy undergraduate and Data Scientist with interests spanning from Health, Bioinformatics, Drug Discovery, Research and Machine Learning Research.
                                 Proficient in SQL, Microsoft Excel and Tableau. I'm also currently learning a programming tool.
@@ -156,7 +156,7 @@
 								<h2>Contact </h2>
 							</header>
 
-							<p> </p>
+							<p> Email: abdulkadirhassana97@gmail.com /p>
 
 							<form method="post" action="#">
 								<div class="row">
