--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-medium"><span class="label">medium</span></a></li>
 				
 							<li><a href="https://github.com/hassana113" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/hassana-abdulkadir-1639301b8/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
