--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<h2>Contact </h2>
 							</header>
 
-							<p> Email: abdulkadirhassana97@gmail.com /p>
+							<p> Email: abdulkadirhassana97@gmail.com </p>
 
 							<form method="post" action="#">
 								<div class="row">
