--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 							<a href="#" class="image featured"><img src="images/pexels-miguel-Ã¡-padriÃ±Ã¡n-2882509.jpg" alt="" /></a>
 
-							<p> I am a third year Pharmacy undergraduate and Data Scientist with interests spanning from Health, Bioinformatics, Drug Discovery, Research and Machine Learning Research.
+							<p> I am a Pharmacy undergraduate and Data Scientist with interests spanning from Health, Bioinformatics, Drug Discovery, Machine Learning, Artificial intelligence and Research.
                                 Proficient in SQL, Microsoft Excel and Tableau. I'm also currently learning a programming tool.
 </p>
 
